feat: Add simple help to discover API
* feat: Add not allowed method controller

* doc: Update api doc
