# backend/src/adapters/rest/controllers/helpController.js
@@ -1,0 +1,12 @@
+const HelpController = () => {
+    return {
+        getHelp(req, res) {
+            res.status(200).json({
+                '/metrics': 'get metrics data',
+                'doc/': 'get api doc',
+            });
+        },
+    };
+};
+
+export default HelpController;
